Fix a variety of bugs in the milestone UI.
- Only show milestones.
- Determine visibility as we add cards.
- Folded all information in to the cards.

--- a/index.html
+++ b/index.html
@@ -39,17 +39,7 @@
     </div>
   </header>
   <main class="mdl-layout__content">
-    <table id="container" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-      <thead>
-        <tr>
-          <th class="mdl-data-table__cell--non-numeric">Repo</th>
-          <th class="mdl-data-table__cell--non-numeric">Milestone</th>
-          <th class="mdl-data-table__cell--non-numeric">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <div id="container"></div>
   </main>
 </div>
 </body>
