--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </div>
     
     <main class="mdl-layout__content mdl-color--grey-100">
-      <div id="container" class="mdl-grid demo-content">
+      <div id="container">
+        <div class="open mdl-grid demo-content"></div>
+        <div class="closed mdl-grid demo-content"></div>
       </div>
     </main>
   </div>
