--- a/repos.html
+++ b/repos.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Milemarker</title>
+  <title>repos :: Milemarker</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js"></script>
   <script src="js/common.js"></script>
-  <script src="js/milemarker.js"></script>
+  <script src="js/repos.js"></script>
 </head>
 <body>
 <div class="mdl-layout__container">
@@ -50,8 +50,6 @@
     
     <main class="mdl-layout__content mdl-color--grey-100">
       <div id="container">
-        <div class="open mdl-grid demo-content"></div>
-        <div class="closed mdl-grid demo-content"></div>
       </div>
     </main>
   </div>
