Remove demo-content class specifier.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     
     <main class="mdl-layout__content mdl-color--grey-100">
       <div id="container">
-        <div class="open mdl-grid demo-content"></div>
-        <div class="closed mdl-grid demo-content"></div>
+        <div class="open mdl-grid"></div>
+        <div class="closed mdl-grid"></div>
       </div>
     </main>
   </div>
