Implement repo ui.

--- a/repos.html
+++ b/repos.html
@@ -49,7 +49,17 @@
     </div>
     
     <main class="mdl-layout__content mdl-color--grey-100">
-      <div id="container">
+      <div id="container" class="mdl-grid">
+        <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+          <thead>
+            <tr>
+              <th class="mdl-data-table__cell--non-numeric">Name</th>
+              <th class="mdl-data-table__cell--non-numeric">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
     </main>
   </div>
