Show completed milestones on a green background.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="mdl-layout__content mdl-color--grey-100">
       <div id="container">
         <div class="open mdl-grid"></div>
-        <div class="closed mdl-grid"></div>
+        <div class="closed mdl-grid mdl-color--green-50"></div>
       </div>
     </main>
   </div>
