Add wiki, issues, pages, and default branch info to repos.

--- a/repos.html
+++ b/repos.html
@@ -55,6 +55,10 @@
             <tr>
               <th class="mdl-data-table__cell--non-numeric">Name</th>
               <th class="mdl-data-table__cell--non-numeric">Description</th>
+              <th>Wiki?</th>
+              <th>Issues?</th>
+              <th>Pages?</th>
+              <th>Default branch</th>
             </tr>
           </thead>
           <tbody>
