--- a/repos.html
+++ b/repos.html
@@ -16,7 +16,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header has-drawer">
     <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600 is-casting-shadow">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Material Motion Milemarker</span>
+        <span class="mdl-layout-title">Material Motion Milemarker :: repos</span>
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
           <form name="filter">
