--- a/repos.html
+++ b/repos.html
@@ -45,6 +45,7 @@
       <nav class="mdl-navigation">
         <a href="index.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">flag</i>Milestones</a>
         <a href="repos.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">code</i>Repos</a>
+        <a href="newbie.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">favorite</i>Newbie-friendly tasks</a>
       </nav>
     </div>
     
