Use correct column names in the newbie table.

--- a/newbie.html
+++ b/newbie.html
@@ -56,9 +56,9 @@
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
           <thead>
             <tr>
+              <th class="mdl-data-table__cell--non-numeric">Repo</th>
               <th class="mdl-data-table__cell--non-numeric">Name</th>
               <th class="mdl-data-table__cell--non-numeric">Description</th>
-              <th class="mdl-data-table__cell--non-numeric">Repository</th>
             </tr>
           </thead>
           <tbody>
