--- a/repos.html
+++ b/repos.html
@@ -20,9 +20,9 @@
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
           <form name="filter">
-            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="filter-stars">
-              <input type="radio" id="filter-stars" class="mdl-radio__button" name="filterby" value="stars">
-              <span class="mdl-radio__label">stars</span>
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="filter-starred">
+              <input type="radio" id="filter-starred" class="mdl-radio__button" name="filterby" value="starred">
+              <span class="mdl-radio__label">starred</span>
             </label>
             <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="filter-android">
               <input type="radio" id="filter-android" class="mdl-radio__button" name="filterby" value="android">
