Add missing column header.

--- a/repos.html
+++ b/repos.html
@@ -60,6 +60,7 @@
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
           <thead>
             <tr>
+              <th class="mdl-data-table__cell--non-numeric">Star</th>
               <th class="mdl-data-table__cell--non-numeric">Name</th>
               <th class="mdl-data-table__cell--non-numeric">Description</th>
               <th>Wiki?</th>
