--- a/newbie.html
+++ b/newbie.html
@@ -48,6 +48,7 @@
     <div class="mdl-layout__drawer mdl-color--blue-grey-800">
       <nav class="mdl-navigation">
         <a href="index.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">flag</i>Milestones</a>
+        <a href="roadmap.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">map</i>Roadmap</a>
         <a href="repos.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">code</i>Repos</a>
         <a href="newbie.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">favorite</i>Newbie-friendly tasks</a>
         <div class="mdl-layout-spacer"></div>
