--- a/roadmap.html
+++ b/roadmap.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>repos :: Milemarker</title>
+  <title>roadmap :: Milemarker</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
@@ -9,14 +9,14 @@
   <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js"></script>
   <script src="js/common.js"></script>
-  <script src="js/repos.js"></script>
+  <script src="js/roadmap.js"></script>
 </head>
 <body>
 <div class="mdl-layout__container">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header has-drawer">
     <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600 is-casting-shadow">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Material Motion Milemarker :: repos</span>
+        <span class="mdl-layout-title">Material Motion Milemarker :: roadmap</span>
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
           <form name="filter">
@@ -62,12 +62,10 @@
           <thead>
             <tr>
               <th class="mdl-data-table__cell--non-numeric">Star</th>
+              <th class="mdl-data-table__cell--non-numeric">Status</th>
+              <th class="mdl-data-table__cell--non-numeric">Repo</th>
               <th class="mdl-data-table__cell--non-numeric">Name</th>
-              <th class="mdl-data-table__cell--non-numeric">Description</th>
-              <th>Wiki?</th>
-              <th>Issues?</th>
-              <th>Pages?</th>
-              <th>Default branch</th>
+              <th class="mdl-data-table__cell--non-numeric">Progress</th>
             </tr>
           </thead>
           <tbody>
