--- a/roadmap.html
+++ b/roadmap.html
@@ -52,7 +52,7 @@
         <a href="repos.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">code</i>Repos</a>
         <a href="newbie.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">favorite</i>Newbie-friendly tasks</a>
         <div class="mdl-layout-spacer"></div>
-        <a id="clear" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">delete</i>Clear local cache</a>
+        <a id="clear" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href="#"><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">delete</i>Clear local cache</a>
       </nav>
     </div>
     
@@ -62,6 +62,7 @@
           <thead>
             <tr>
               <th class="mdl-data-table__cell--non-numeric">Star</th>
+              <th class="mdl-data-table__cell--non-numeric">Owner</th>
               <th class="mdl-data-table__cell--non-numeric">Status</th>
               <th class="mdl-data-table__cell--non-numeric">Repo</th>
               <th class="mdl-data-table__cell--non-numeric">Name</th>
