--- a/roadmap.html
+++ b/roadmap.html
@@ -8,7 +8,7 @@
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js"></script>
-  <script src="http://momentjs.com/downloads/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
   <script src="js/common.js"></script>
   <script src="js/roadmap.js"></script>
 </head>
