--- a/repos.html
+++ b/repos.html
@@ -50,6 +50,7 @@
         <a href="index.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">flag</i>Milestones</a>
         <a href="roadmap.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">map</i>Roadmap</a>
         <a href="repos.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">code</i>Repos</a>
+        <a href="assigned.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">person</i>Assigned</a>
         <a href="newbie.html" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href=""><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">favorite</i>Newbie-friendly tasks</a>
         <div class="mdl-layout-spacer"></div>
         <a id="clear" class="mdl-navigation__link active mdl-color-text--blue-grey-200" href="#"><i class="mdl-color-text--blue-grey-200 material-icons" role="presentation">delete</i>Clear local cache</a>
